--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
     "redux": "^5.0.1",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -51,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.13"
   }
 }
