--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.121",
     "@types/react": "^18.3.12",
+    "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18.3.1",
     "dayjs": "^1.11.13",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-native-safe-area-context": "^5.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
