--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@leanoncompany/supporti-ark-office-project": "^0.0.416",
+    "@leanoncompany/supporti-react-ui": "^0.0.1",
+    "@leanoncompany/supporti-utility": "^0.0.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.2.0",
