--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18.3.1",
     "dayjs": "^1.11.13",
+    "i18next": "^23.7.16",
+    "i18next-browser-languagedetector": "^8.0.4",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^13.2.2",
     "react-icons": "^5.5.0",
     "react-native-safe-area-context": "^5.0.0",
     "react-redux": "^9.1.2",
