--- a/package.json
+++ b/package.json
@@ -22,19 +22,18 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.121",
     "@types/react": "^18.3.12",
-    "@types/react-datepicker": "^7.0.0",
     "@types/react-dom": "^18.3.1",
     "dayjs": "^1.11.13",
     "i18next": "^23.7.16",
     "i18next-browser-languagedetector": "^8.0.4",
     "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-datepicker": "^8.2.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^13.2.2",
     "react-icons": "^5.5.0",
-    "react-native-safe-area-context": "^5.0.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^7.0.1",
+    "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.3",
