--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^13.2.2",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.3",
     "redux": "^5.0.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
